<resources>
    <string name="app_name">Animal Care</string>
    <string name="app_in_name">Animal Care</string>
    <string name="app_name_after">Реєстрація Додатку</string>
    <string name="text_bottom">Увійдіть до свого облікового запису</string>
    <string name="button_Sign_in">Увійти</string>
    <string name="button_Register">Зареєструватися</string>
    <string name="button_back">Назад</string>
    <string name="level">Рівень: </string>
    <string name="level1">Рівень 1</string>
    <string name="variant1">Варіант 1 </string>
    <string name="variant2">Варіант 2</string>
    <string name="levelone">Оберіть з двох варіантів правильну відповідь. Спробуйте набрати 5 балів.</string>
    <string name="textcontinue">Продовжити</string>
    <string name="leveloneEND">"Вітаємо! Рівень успішно пройден\n
        А ви знали, що плями на шкірі жирафа унікальні, як відбитки пальця людини."</string>
    <string name="menu">До головного меню</string>
    <string name="already_have_acc">Вже існує обліковий запис? Увійдіть</string>
    <string name="note_text">Введіть текст нотатки</string>
    <string name="save">Зберегти</string>
    <string name="petwalk_1">ТВОЇ НАСТУПНІ ПРИГОДИ</string>
    <string name="petwalk_2">почніть тренування або прогулянку</string>
    <string name="petwalk_3">Прогулянка</string>
    <string name="petwalk_4">Почати зараз</string>
    <string name="petwalk_5">Активніть та ігри</string>
    <string name="forgot_password">Забули пароль? Відновити</string>
    <string name="dont_have_account">Немає облікового запису? Зареєструйтесь</string>
    <string name="notesis">НОТАТКИ - ЦЕ ЗРУЧНО</string>
    <string name="notesis_1">для того щоб видалити нотатку \nнатисьніть на неї</string>
    <string name="notesis_2">Додати</string>
    <string name="notesis_3">Введіть текст</string>
    <string name="menu_1">Вітаємо:)</string>
    <string name="menu_2">відкривається зторінка з меню</string>
    <string name="menu_3">МЕНЮ</string>
    <string name="menu_4">Оберіть наступні дії:</string>
    <string name="care_1">ДОГЛЯД ЗА ТВАРИНОЮ</string>
    <string name="care_2">додавай нагадування та нотатки</string>
    <string name="care_3">ВЧАСНО</string>
    <string name="care_4">Переглянути</string>
    <string name="care_5">Перейти одразу до нотаток</string>
    <string name="care_list_1">СЛІДКУЙТЕ ЗА ДОГЛЯДОМ</string>
    <string name="care_list_2">перейдіть на обраний пункт та встановіть нагадування або нотатку</string>
    <string name="health_list_1">СЛІДКУЙТЕ ЗА ЗДОРОВ\'ЯМ</string>
    <string name="health_1">МЕДИЧНИЙ ОГЛЯД</string>
    <string name="health_2">додавай нагадування та нотатки</string>
    <string name="health_3">ВЧАСНО</string>
    <string name="health_4">Переглянути</string>
    <string name="health_5">Перейти одразу до нотаток</string>
    <string name="reminder">Ввудіть Ваше завдання</string>
    <string name="shelter_1">ОБЕРІТЬ СВОГО НОВОГО ДРУГА</string>
    <string name="shelter_2">їдете - залиште тварнину в готелі</string>
    <string name="shelter_3">Притулки та Готелі</string>
    <string name="shelter_4">Переглянути притулки</string>
    <string name="shelter_5">Переглянути готелі</string>
    <string name="carechoose_1">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ВОДНІ ПРОЦЕДУРИ</string>
    <string name="carechoose_2">Встановити час</string>
    <string name="carechoose_3">Видалити всі нагадування</string>
    <string name="carechoose_4">Перейти до нотаток</string>
    <string name="carechoose_5">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО РОЗЧІСУВАННЯ СВОГО ВИХОВАНЦЯ</string>
    <string name="carechoose_6">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ЧИСТКУ ВУХ</string>
    <string name="carechoose_7">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО СТРИЖКУ ПАЗУРІВ</string>
    <string name="carechoose_8">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ДОГЛЯД ЗА ЗУБАМИ</string>
    <string name="carechoose_10">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ПРИЙОМ ВІТАМІНІВ</string>
    <string name="carechoose_11">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ПРИЙМАННЯ ЇЖІ</string>
    <string name="carechoose_12">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ПРОГУЛЯНКУ ТА ІГРИ</string>
    <string name="healthchoose_1">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ПРИЯЙНЯТТЯ ЗАСОБІВ ВІД АЛЕРГІЇ</string>
    <string name="healthchoose_2">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ВІДВІДУВАННЯ ВЕТЕРИНАРА</string>
    <string name="healthchoose_3">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ЗАПИС ХВОРОБИ</string>
    <string name="healthchoose_4">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО ОПЕРАЦІЇ</string>
    <string name="healthchoose_5">ВСТАНОВІТЬ НАГАДУВАННЯ ПРО АНАЛІЗИ</string>
    <string name="activ">Активність</string>
    <string name="new_memory_title_hint">Add Title</string>
    <string name="new_memory_btn_cancel">Cancel</string>
    <string name="new_memory_btn_save">Save</string>
    <string name="activity_main_empty_view_text">Create your first photo memory with the button below.</string>
    <string name="new_memory_btn_gallery">Add a photo from gallery</string>
    <string name="new_memory_btn_camera">Add a photo from camera</string>
    <string name="training_1">Ви були активні:</string>
    <string name="training_2">Почати</string>
    <string name="training_3">Завершити</string>
    <string name="training_4">ПРОВОДЬТЕ ЧАС РАЗОМ</string>
    <string name="training_5">Перейдіть на обраний пункт та дізнйтесь щось корисне</string>
    <string name="images_1">Обрати файл</string>
    <string name="images_2">Введіть підпис</string>
    <string name="images_3">завантажити</string>
    <string name="images_4">Перегляд історій</string>
    <string name="images_5">ВАЖЛИВІ МОМЕНТИ ТА ЗНІМКИ</string>
    <string name="images_6">створюйте знімки своїх улюбленців та додавайте у галерею-історію</string>
    <string name="images_7">ГАЛЕРЕЯ-ІСТОРІЯ</string>
    <string name="images_8">видалити фото можна за допомогою довгого натискання</string>
    <string name="hotels_1">ПРИТУЛКИ ДЛЯ ТВАРИН</string>
    <string name="hotels_2">оберіть свого нового друга переглянувши притулки</string>
    <string name="hotels_3">ГОТЕЛІ ДЛЯ ТВАРИН</string>
    <string name="hotels_4">залиште свого вихованця на дейкий час в готелі</string>
    <string name="pdf_1">ЗБЕРЕЖІТЬ ЗАПИС У PDF</string>
    <string name="pdf_2">введіть текст, натисніть кнопку «зберегти», після чого ваш докумет зберігатемиться в пам\'яті телефна</string>
    <string name="pdf_3">зберегти</string>
    <string name="pdf_4">ДОКУМЕНТИ ТА КНИГИ</string>
    <string name="pdf_5">відкрийте файл з розширенням pdf</string>
    <string name="table_1">ОБЕРІТЬ НАСТУПНІ ДІЇ:</string>
    <string name="table_2">Запис у PDF</string>
    <string name="table_3">Переглянути файли на телефоні</string>
    <string name="table_4">Контакти ветеринарів</string>
    <string name="contact_back_end">Натисніть ще раз щоб вийти</string>
    <string name="contact_list_phonr_error">Немає номеру телефону</string>
    <string name="add_name_null">Немає ім\'я</string>
    <string name="read_add_score_dialog_message">Додати за {|} клас?</string>
    <string name="permission_error">Немає доступу</string>
    <string name="contacts_1">ВАЖЛИВІ КОНТАКТИ</string>
    <string name="contacts_2">додайте контакт та здійсніть дзвінок</string>
    <string name="contacts_3">СТВОРІТЬ НОВИЙ КОНТАКТ</string>
    <string name="contacts_4">заповінть поля для реєстрації нового контакта</string>
    <string name="contacts_5">Ім\'я</string>
    <string name="contacts_6">Пошта</string>
    <string name="contacts_7">Номер телефону</string>
    <string name="contacts_8">ПЕРЕГЛЯД КОНТАКТУ</string>
    <string name="contacts_9">на цій сторінці ви можете змінити аватар контакта, відправити смс та подзвонити</string>
    <string name="btn_main">зареєструйтесь у додатку нижче</string>
    <string name="main_act">Маєте домашнього улюбленця?</string>
    <string name="main_act_2">Увійдіть до додатку та слідкуйте за здоров\'ям свого вихованця, відмічайте важливі події та не пропустіть нічого важливого.</string>
    <string name="register_main_1">Пошта</string>
    <string name="register_main_2">Пароль</string>
    <string name="register_main_3">Ім\'я</string>
    <string name="register_main_4">Телефон</string>
    <string name="title_activity_training_cat">Топ-10 іграшок</string>
</resources>