<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.LoginActivity">


    <ImageView
        android:id="@+id/robo_icon"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:src="@drawable/welc" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/robo_icon"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_btn"
        android:elevation="1dp"
        android:hint="@string/contacts_6"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailEt"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_btn"
        android:elevation="1dp"
        android:hint="@string/register_main_2"
        android:inputType="textPassword"
        android:paddingLeft="15dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:text="@string/button_Sign_in"
        android:layout_below="@id/passwordEt"
        android:background="@drawable/edit_btn_indigo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/recoverPasstv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:layout_below="@id/loginBtn"
        android:textColor="@color/button_sign_in"/>

    <TextView
        android:id="@+id/nothave_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/button_sign_in"/>

</RelativeLayout>