<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".images.Images">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/indigo_custom"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </View>

    <TextView
        android:id="@+id/notes_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/images_5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absolutey="28dp"></TextView>


    <TextView
        android:id="@+id/notes_2"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/images_6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/notes_1"
        tools:ignore="MissingConstraints"></TextView>

    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/images_1"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_green"></Button>

    <EditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/images_2"></EditText>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="485dp"
        android:layout_above="@+id/progress_bar"
        android:layout_below="@+id/edit_text_file_name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="48dp"></ImageView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_upload"
        android:layout_marginBottom="16dp"></ProgressBar>

    <TextView
        android:id="@+id/text_view_show_uploads"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="31dp"
        android:gravity="center"
        android:text="@string/images_4"
        android:textSize="16sp"></TextView>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="31dp"
        android:text="@string/images_3"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_green"></Button>

    <Button
        android:id="@+id/button_back_images"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/btn_grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></Button>
</RelativeLayout>