<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.Notes"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/indigo_custom"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

        </View>

        <TextView
            android:id="@+id/notes_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/notesis"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absolutey="28dp"></TextView>


        <TextView
            android:id="@+id/notes_2"
            android:layout_width="347dp"
            android:layout_height="113dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/notesis_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/notes_1"
            tools:ignore="MissingConstraints"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/item_edit_text"
            android:hint="@string/notesis_3"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/add_btn"
            android:text="@string/notesis_2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_green">
        </Button>

    </LinearLayout>


    <ListView
        android:id="@+id/item_list"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="500dp">
    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/button_back_notes"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:text="@string/button_back"
            android:textColor="@color/white"
            android:background="@drawable/btn_grey"
            android:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>