<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hotel.Hotels">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/indigo_custom"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

        </View>

        <TextView
            android:id="@+id/notes_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/hotels_3"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absolutey="28dp"></TextView>


        <TextView
            android:id="@+id/notes_2"
            android:layout_width="347dp"
            android:layout_height="113dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/hotels_4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/notes_1"
            tools:ignore="MissingConstraints"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/listView_hotels"
        android:layout_width="match_parent"
        android:layout_height="550dp">

    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/button_back_hotels"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_grey"
            android:fontFamily="@font/montserrat"
            android:text="@string/button_back"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>